Modification pour accéder au sujet via survey edition et non pas survey